--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "cc.fovea.cordova.openwith",
-  "version": "2.1.0",
+  "name": "cordova-plugin-openwith",
+  "version": "1.0.0",
   "description": "Cordova \"Open With\" plugin for iOS and Android",
   "cordova": {
-    "id": "cc.fovea.cordova.openwith",
+    "id": "cordova-plugin-openwith",
     "platforms": [
       "android",
       "ios"
